deploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tracker
  namespace: tracker
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - tracker.sviniabanditka.com
      secretName: tracker-tls
  rules:
    - host: tracker.sviniabanditka.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tracker
                port:
                  number: 80
